feat/repartidores: creacion de la conexion a la base de datos y modificacion en los metodos
